--- a/Templates/invoice/invoice.html
+++ b/Templates/invoice/invoice.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invoice Details - Trustcare Clinic</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/static/styles/style.css">
+    <link rel="stylesheet" href="/static/styles/invoice_style.css">
 </head>
 <body>
     <div class="app-shell">
@@ -103,7 +103,7 @@
                     <button class="btn-round">
                         <i class="fas fa-bell"></i>
                     </button>
-                    <div class="avatar">AF</div>
+                    <div class="avatar">PH</div>
                 </div>
             </div>
 
