--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -49,7 +49,7 @@ body {
 }
 
 /* Sidebar Styles */
-.sidebar {
+/* .sidebar {
     width: 250px;
     background-color: var(--sidebar-bg);
     color: white;
@@ -77,7 +77,7 @@ body {
     color: var(--sidebar-text);
     text-transform: uppercase;
     letter-spacing: 0.5px;
-}
+} */
 
 .user-profile {
     padding: 20px;
