updated admin feedback page

--- a/Templates/a_feedback/a_feedback.html
+++ b/Templates/a_feedback/a_feedback.html
@@ -33,11 +33,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="admin_feedback.html" class="nav-link active">
-                        <span class="icon"><i class="fas fa-comment-medical"></i></span>
-                        Patient Feedback
-                    </a>
-                </li>
+    <a href="/admin-feedback">Feedback</a>
+        <span class="icon"><i class="fas fa-comment-medical"></i></span>
+        Patient Feedback
+    </a>
+</li>
                 <li class="nav-item">
                     <a href="admin_patients.html" class="nav-link">
                         <span class="icon"><i class="fas fa-user-injured"></i></span>
